# llvm-cpp-compiler

./: CMakeLists.txt  LICENSE  README.md  flake.nix
assets/: demo.tape
docs/: development_chetsheet.txt  lang_spec.txt
include/: AST.hpp  Backend.hpp  IR_Generator.hpp  JITengine.hpp  Token.hpp
lang_examples/: factorial.toy  while_loop.toy
src/: main.cpp
src/backend/: Backend.cpp  JITengine.cpp
src/frontend/: AST.cpp  IR_Generator.cpp  Parser.cpp
